version 1. TODO: GC types